--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Roboto'>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
     <style>
       html,
       body,
@@ -18,16 +18,16 @@
       h6 {
         font-family: "Roboto", sans-serif
       }
-      ul {
+      ul.primary {
         list-style-type: none;
         padding: 0px 0px 0px 25px;
         margin: 0px;
       }
-      ul li {
+      ul.primary li {
         position: relative;
         margin: 0;
       }
-      ul li:after {
+      ul.primary li:after {
         position: absolute;
         top: 9px;
         left: -17px;
@@ -42,7 +42,7 @@
         line-height: 24px;
         background: #666;
       }
-      ul li:before {
+      ul.primary li:before {
         position: absolute;
         left: -14px;
         top: 21px;
@@ -51,7 +51,7 @@
         width: 0;
         border-left: 3px dashed #00000041;
       }
-      ul li:last-of-type:before {
+      ul.primary li:last-of-type:before {
         border: none;
       }
     </style>
@@ -64,57 +64,62 @@
         <!-- Left Column -->
         <div class="w3-third">
           <div class="w3-white w3-text-grey w3-card-4">
-            <div class="w3-container">
-              <h3>Dauler Palhares da Costa Viana</h3>
+            <div class="w3-display-container">
+              <img src="2019-08-16.png" style="width:100%" alt="Avatar">
+              <div class="w3-display-bottomleft w3-container w3-light-grey w3-opacity" style="width: 100%;">
+                <h3>Dauler Palhares da Costa Viana</h3>
+              </div>
             </div>
             <div class="w3-container">
-              <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-teal"></i>Tech Lead and ASP.net
+              <p><i class="fas fa-briefcase fa-fw w3-margin-right w3-large w3-text-indigo"></i>Tech Lead and ASP.net
                 developer</p>
-              <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-teal"></i>Belo Horizonte-MG, Brazil</p>
-              <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-teal"></i>daulerpalhares@gmail.com</p>
-              <p><i class="fa fa-phone fa-fw w3-margin-right w3-large w3-text-teal"></i>+55 (31) 997760-0833 </p>
+              <p><i class="fas fa-house fa-fw w3-margin-right w3-large w3-text-indigo"></i>Belo Horizonte-MG, Brazil</p>
+              <p><a href="mailto:daulerpalhares@gmail.com"><i class="fas fa-envelope fa-fw w3-margin-right w3-large w3-text-indigo"></i>daulerpalhares@gmail.com</a></p>
+              <p>
+                <a href="tel:+5531997760833"><i class="fas fa-phone fa-fw w3-margin-right w3-large w3-text-indigo"></i>+55 (31) 997760-0833</a>              
+                <a href="https://wa.me/5531997760833"><i class="fab fa-whatsapp fa-fw w3-margin-left w3-margin-right w3-large w3-text-indigo"></i>+55 (31) 997760-0833</a>
+              </p>
               <hr>
 
-              <p class="w3-large"><b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-teal"></i>Skills</b></p>
+              <p class="w3-large"><b><i class="fas fa-asterisk fa-fw w3-margin-right w3-text-indigo"></i>Skills</b></p>
               <p>C#</p>
               <div class="w3-light-grey w3-round-xlarge w3-small">
-                <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:100%">100%</div>
+                <div class="w3-container w3-center w3-round-xlarge w3-indigo" style="width:100%">100%</div>
               </div>
               <p>.Net Core</p>
               <div class="w3-light-grey w3-round-xlarge w3-small">
-                <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:100%">100%</div>
+                <div class="w3-container w3-center w3-round-xlarge w3-indigo" style="width:100%">100%</div>
               </div>
               <p>ASP.Net</p>
               <div class="w3-light-grey w3-round-xlarge w3-small">
-                <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:100%">100%</div>
+                <div class="w3-container w3-center w3-round-xlarge w3-indigo" style="width:100%">100%</div>
               </div>
               <p>MySql</p>
               <div class="w3-light-grey w3-round-xlarge w3-small">
-                <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:90%">90%</div>
+                <div class="w3-container w3-center w3-round-xlarge w3-indigo" style="width:90%">90%</div>
               </div>
               <p>HTML</p>
               <div class="w3-light-grey w3-round-xlarge w3-small">
-                <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:100%">100%</div>
+                <div class="w3-container w3-center w3-round-xlarge w3-indigo" style="width:100%">100%</div>
               </div>
               <p>Javascript</p>
               <div class="w3-light-grey w3-round-xlarge w3-small">
-                <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:80%">80%</div>
+                <div class="w3-container w3-center w3-round-xlarge w3-indigo" style="width:80%">80%</div>
               </div>
               <br>
 
-              <p class="w3-large w3-text-theme"><b><i
-                    class="fa fa-globe fa-fw w3-margin-right w3-text-teal"></i>Languages</b></p>
+              <p class="w3-large w3-text-theme"><b><i class="fas fa-globe fa-fw w3-margin-right w3-text-indigo"></i>Languages</b></p>
               <p>Portuguese</p>
               <div class="w3-light-grey w3-round-xlarge">
-                <div class="w3-round-xlarge w3-teal" style="height:24px;width:100%"></div>
+                <div class="w3-round-xlarge w3-indigo" style="height:24px;width:100%"></div>
               </div>
               <p>English</p>
               <div class="w3-light-grey w3-round-xlarge">
-                <div class="w3-round-xlarge w3-teal" style="height:24px;width:80%"></div>
+                <div class="w3-round-xlarge w3-indigo" style="height:24px;width:80%"></div>
               </div>
               <p>Spanish</p>
               <div class="w3-light-grey w3-round-xlarge">
-                <div class="w3-round-xlarge w3-teal" style="height:24px;width:15%"></div>
+                <div class="w3-round-xlarge w3-indigo" style="height:24px;width:15%"></div>
               </div>
               <br>
             </div>
@@ -124,52 +129,50 @@
         <!-- Right Column -->
         <div class="w3-twothird">
           <div class="w3-container w3-card w3-white w3-margin-bottom">
-            <h2 class="w3-text-grey w3-padding-16"><i
-                class="fa fa-terminal fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>About</h2>
+            <h2 class="w3-text-grey w3-padding-16"><i class="fas fa-terminal fa-fw w3-margin-right w3-xxlarge w3-text-indigo"></i>About</h2>
             <p>TODO</p>
           </div>
           <div class="w3-container w3-card w3-white w3-margin-bottom">
-            <h2 class="w3-text-grey w3-padding-16"><i
-                class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Work Experience</h2>
+            <h2 class="w3-text-grey w3-padding-16"><i class="fas fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-indigo"></i>Work Experience</h2>
             <div class="w3-container">
               <h4 class="w3-opacity"><b>Simply Tecnologia</b></h4>
-              <ul>
+              <ul class="primary">
                 <li>
-                  <h5 class="w3-opacity"><b>Tech lead</b></h5>
-                  <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Jul 2022 - <span
-                      class="w3-tag w3-teal w3-round">Current</span></h6>
-                  <p>TODO</p>
+                  <h5 class="w3-opacity"><b>Tech Lead</b></h5>
+                  <h6 class="w3-text-indigo"><i class="fas fa-calendar fa-fw w3-margin-right"></i>Jul 2022 - <span
+                      class="w3-tag w3-indigo w3-round">Current</span></h6>
+                  <p>In addition to all the things mentioned above, Kanban card organization, Helping the developer team. Responsible for checking pull requests </p>
                 </li>
                 <li>
-                  <h5 class="w3-opacity"><b>Full-Stack developer Pleno</b></h5>
-                  <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Jun 2021 - Jul 2022</h6>
-                  <p>TODO</p>
+                  <h5 class="w3-opacity"><b>Full-Stack Developer</b></h5>
+                  <h6 class="w3-text-indigo"><i class="fas fa-calendar fa-fw w3-margin-right"></i>Jun 2021 - Jul 2022</h6>
+                  <p>In addition to all the things mentioned above, Maintenance of RESTFul APIs, Responsible for the migration of the TFVC versioning service to GIT.</p>
                 </li>
                 <li>
-                  <h5 class="w3-opacity"><b>Full-Stack developer Jr</b></h5>
-                  <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Jul 2020 - Jun 2021</h6>
-                  <p>TODO</p>
+                  <h5 class="w3-opacity"><b>Full-Stack Developer Jr</b></h5>
+                  <h6 class="w3-text-indigo"><i class="fas fa-calendar fa-fw w3-margin-right"></i>Jul 2020 - Jun 2021</h6>
+                  <p>Responsible for the development of new features in the system - using C# Asp.net MVC 3, Razor, Entity Framework - and correction of BUGs. Queries and Data Import to SQL Server Database </p>
                 </li>
               </ul>
               <hr>
             </div>
             <div class="w3-container">
               <h4 class="w3-opacity"><b>Netimóveis</b></h4>
-              <ul>
+              <ul class="primary">
                 <li>
                   <h5 class="w3-opacity"><b>System Analyst</b></h5>
-                  <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Jun 2019 - Jun 2020</h6>
-                  <p>TODO</p>
+                  <h6 class="w3-text-indigo"><i class="fas fa-calendar fa-fw w3-margin-right"></i>Jun 2019 - Jun 2020</h6>
+                  <p>Responsible for the development of new features in the system - using C# Asp.net MVC 3,Windows Services - and correction of BUGs.Queries and Data Import to SQL Server Database. Lead developer of an MVC project using .Net Core and React to generate annual and monthly reports with dynamic fields based on user permissions</p>
                 </li>
               </ul>
               <hr>
             </div>
             <div class="w3-container">
               <h4 class="w3-opacity"><b>Mup Studios</b></h4>
-              <ul>
+              <ul class="primary">
                 <li>
                   <h5 class="w3-opacity"><b>Game developer</b></h5>
-                  <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Jul 2018 - Jun 2019</h6>
+                  <h6 class="w3-text-indigo"><i class="fas fa-calendar fa-fw w3-margin-right"></i>Jul 2018 - Jun 2019</h6>
                   <p>Mobile game developer responsible for programming the major systems used in the games using .Net 4.0
                     and integrations such as IAPP,Game Ads</p>
                 </li>
@@ -178,10 +181,10 @@
             </div>
             <div class="w3-container">
               <h4 class="w3-opacity"><b>IMU Studios</b></h4>
-              <ul>
+              <ul class="primary">
                 <li>
                   <h5 class="w3-opacity"><b>Game developer</b></h5>
-                  <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Nov 2016 - May 2017</h6>
+                  <h6 class="w3-text-indigo"><i class="fas fa-calendar fa-fw w3-margin-right"></i>Nov 2016 - May 2017</h6>
                   <p>Programming the basic movement system used in the game engine</p>
                 </li>
               </ul>
@@ -189,10 +192,10 @@
             </div>
             <div class="w3-container">
               <h4 class="w3-opacity"><b>Seven BH</b></h4>
-              <ul>
+              <ul class="primary">
                 <li>
                   <h5 class="w3-opacity"><b>Internship Laboratory Technician</b></h5>
-                  <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Jan 2012 - Jul 2013</h6>
+                  <h6 class="w3-text-indigo"><i class="fas fa-calendar fa-fw w3-margin-right"></i>Jan 2012 - Jul 2013</h6>
                   <p>Helping the teacher to clarify students doubts. Private Lessons for students who missed classes.
                     Record of content taught in the classroom</p><br>
                 </li>
@@ -200,26 +203,40 @@
             </div>
           </div>
           <div class="w3-container w3-card w3-white">
-            <h2 class="w3-text-grey w3-padding-16"><i
-                class="fa fa-graduation-cap fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Education</h2>
+            <h2 class="w3-text-grey w3-padding-16"><i class="fas fa-graduation-cap fa-fw w3-margin-right w3-xxlarge w3-text-indigo"></i>Education</h2>
             <div class="w3-container">
-              <h5 class="w3-opacity"><b>TODO</b></h5>
-              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i><span
-                  class="w3-tag w3-teal w3-round">Forever</span></h6>
-              <p>TODO</p>
-              <hr>
+              <h5 class="w3-opacity"><b>Instituto de Gestão e Tecnologia da Informação</b></h5>
+              <h6 class="w3-text-indigo"><i class="fas fa-calendar fa-fw w3-margin-right"></i>2019 - 2020</h6>
+              <p>
+                Master of Business Administration in Full-Stack development.
+              </p>
+              <br>
             </div>
             <div class="w3-container">
-              <h5 class="w3-opacity"><b>TODO</b></h5>
-              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>TODO - <span
-                  class="w3-tag w3-teal w3-round">Current</span></h6>
-              <p>TODO</p>
-              <hr>
+              <h5 class="w3-opacity"><b>Pontifícia Universidade Católica de Minas Gerais</b></h5>
+              <h6 class="w3-text-indigo"><i class="fas fa-calendar fa-fw w3-margin-right"></i>2013 - 2016</h6>
+              <p>
+                Bachelor's Degree in Digital Game Development.
+              </p>
+              <br>
+            </div>
+          </div>
+          <div class="w3-container w3-card w3-white">
+            <h2 class="w3-text-grey w3-padding-16"><i class="fas fa-certificate fa-fw w3-margin-right w3-xxlarge w3-text-indigo"></i>Licenses & Certifications</h2>
+            <div class="w3-container">
+              <h5 class="w3-opacity"><b>First Certificate in English | University of Cambridge</b></h5>
+              <h6 class="w3-text-indigo"><i class="fas fa-calendar fa-fw w3-margin-right"></i>Issued Jan 2015</h6>
+              <p>Credential ID EF181201</p>
+              <br>
             </div>
             <div class="w3-container">
-              <h5 class="w3-opacity"><b>TODO</b></h5>
-              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>TODO - TODO</h6>
-              <p>TODO</p><br>
+              <h5 class="w3-opacity"><b>Udemy</b></h5>
+              <h6 class="w3-text-indigo"><i class="fas fa-calendar fa-fw w3-margin-right"></i>Multiple Issues dates</h6>
+              <ul>
+                <li><a href="https://www.udemy.com/certificate/UC-c74f2ce4-c806-4462-84e7-7443547c7599/">Construindo Aplicações Web Com o Novo Angular (4, 5 e 6)</a></li>
+              </ul>
+              <p>Credential ID EF181201</p>
+              <br>
             </div>
           </div>
           <!-- End Right Column -->
@@ -228,14 +245,12 @@
       </div>
       <!-- End Page Container -->
     </div>
-    <footer class="w3-container w3-teal w3-center w3-margin-top">
+    <footer class="w3-container w3-indigo w3-center w3-margin-top">
       <p>Find me on social media.</p>
-      <i class="fa fa-facebook-official w3-hover-opacity"></i>
-      <i class="fa fa-instagram w3-hover-opacity"></i>
-      <i class="fa fa-snapchat w3-hover-opacity"></i>
-      <i class="fa fa-pinterest-p w3-hover-opacity"></i>
-      <i class="fa fa-twitter w3-hover-opacity"></i>
-      <i class="fa fa-github w3-hover-opacity"></i>
+      <a href="https://www.facebook.com/dauler.palhares/"><i class="fab fa-facebook w3-hover-opacity"></i></a>
+      <a href="https://www.instagram.com/daulerpalhares/"><i class="fab fa-instagram w3-hover-opacity"></i></a>
+      <a href="https://github.com/DaulerPalhares"><i class="fab fa-github w3-hover-opacity"></i></a>
+      <a href="https://www.linkedin.com/in/daulerpalhares"><i class="fab fa-linkedin w3-hover-opacity"></i></a>
       <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
     </footer>
   </body>
