--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
         <div class="w3-twothird">
           <div class="w3-container w3-card w3-white w3-margin-bottom">
             <h2 class="w3-text-grey w3-padding-16"><i class="fas fa-terminal fa-fw w3-margin-right w3-xxlarge w3-text-indigo"></i>About</h2>
-            <p>TODO</p>
+            <p> Graduated in Digital Games and with an MBA in full-stack development, I left the game development area in 2019 and migrated to the development of .Net Web applications.</p>
           </div>
           <div class="w3-container w3-card w3-white w3-margin-bottom">
             <h2 class="w3-text-grey w3-padding-16"><i class="fas fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-indigo"></i>Work Experience</h2>
